injectable/tests/ui/missing_constructor.stderr
error: #[injectable] without #[injectable_ctor] requires at least one #[post_construct] or #[pre_destruct] method. For field injection without lifecycle hooks, use #[injectable] alone.
 --> tests/ui/missing_constructor.rs
  |
  | impl MyService {
  |      ^^^^^^^^^
